[project]
name = "GitHub Art"
version = "0.1.0"
description = "Simple app for GitHub art"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 120
exclude = ["__pycache__", "venv", "uv.lock", "github_art"]

[tool.ruff.lint]
select = ["E", "F", "W"]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
